# Semaphoren

./: CMakeLists.txt  README.md
include/: sem.h
src/: lib.h  sem.c
